another tiny minor change before I leave

--- a/thesis.html
+++ b/thesis.html
@@ -16,8 +16,9 @@
         {{/each}}
     </select>
     <br />    
-    This is working, probably. <br />
+    This is working, probably. <br /><br />
     <table id="myTable"></table>
+    <br />
 
     {{#if selectedClass}}
         {{createTable}}        
