--- a/thesis.html
+++ b/thesis.html
@@ -24,3 +24,28 @@
         {{createTable}}        
     {{/if}}
 </template>
+
+<!--
+    DATABASE INFORMATION
+
+    ClassList
+    - room
+    - rows
+    - cols
+    - aisles
+    - _id
+
+    UserList
+    - name
+    - role    (prof, student)
+    - status  (active, inactive)
+    - _id
+
+    CourseList
+    - course name
+    - prof name
+    - room
+    - _id
+
+-->
+
