hard coded the classroom, about to input fake IP addresses

--- a/thesis.html
+++ b/thesis.html
@@ -18,54 +18,55 @@
     <!--both professors and students will see this-->
         {{setActive}}
         <!--this code is for creating the table for the class-->
+        <br /><br />
         <table id="classroom">
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
                 <td class="aisle"></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
                 <td class="aisle"></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
                 <td class="aisle"></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
                 <td class="aisle"></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
                 <td class="aisle"></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
                 <td class="aisle"></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
+                <td class="seat"></td>
             </tr>
         </table>
         <br />
