seat becomes active on page load. buttons work. setinactive does not work.

--- a/thesis.html
+++ b/thesis.html
@@ -16,9 +16,9 @@
 
 <template name="classroomlayout">
     <!--both professors and students will see this-->
-        <!--{{#if seatInactive}}
+        {{#if seatInactive}}
             {{setActive}}
-        {{/if}}-->
+        {{/if}}
         <!--this code is for creating the table for the class-->
         <br /><br />
         <table id="classroom">
@@ -100,6 +100,7 @@
 <template name="questions">
     Enter a Question: <input type="text" width="400px"/>
 </template>
+
 
 <!--Database Information
 
