--- a/thesis.html
+++ b/thesis.html
@@ -64,36 +64,17 @@
                     <span class="up {{votedup}}">↑</span>
                     <span class="down {{voteddown}}">↓</span>
                 </div>
-                <div id="questioncontent">
+                <div id="content{{_id}}" class="questioncontent">
                     {{score}} -- {{content}}
                 </div>
                 {{#if professor}}
                     <div class="activebut">X</div>
                 {{/if}}
             </div>
+            <!-- {{colorize}} -->
         {{/each}}
     </div>
     <br />
 
     
 </template>
-
-
-<!--Database Information
-
-SeatList
-- IP
-- status
-- row
-- col
-- _id
-
-Questions
-- ID
-- timestamp///////
-- IP
-- score
-- status
-
--->
-
