colors and voting works. SetInactive is the only function not working.

--- a/thesis.html
+++ b/thesis.html
@@ -72,6 +72,9 @@
                 {{/if}}
             </div>
         {{/each}}
+        {{#each question}}
+            {{colorize}}
+        {{/each}}
     </div>
     <br />
 
