I THINK inactiveFunction is working.

--- a/thesis.html
+++ b/thesis.html
@@ -1,7 +1,7 @@
 <head>
     <title>Lecture</title>
 </head>
-<body>
+<body onbeforeunload="inactiveFunction();">
     <h1>Welcome, Student!</h1>
     <p><span style="float:left;">{{> statusbuttons}}</span></p>
     {{> classroomlayout }}
