--- a/client/thesis.html
+++ b/client/thesis.html
@@ -15,11 +15,11 @@
 </template>
 
 <template name="classroomlayout">
-    <!--both professors and students will see this-->
-        {{#if seatInactive}}
-            {{setActive}}
-        {{/if}}
-        <!--this code is for creating the table for the class-->
+           <!-- {{#if seatInactive}}  -->
+        {{getIP}}
+        {{setActive}} 
+          <!-- {{/if}}     -->
+
         <br /><br />
         <table id="classroom">
             <tr>
