--- a/client/thesis.html
+++ b/client/thesis.html
@@ -1,18 +1,30 @@
 <head>
     <title>Lecture</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $("#thing").click(function(){
+                $.get("studentID", function(data, status){
+                    alert("data: "+data+"\nStatus: "+status);
+                });
+            });
+        });
+    </script>
 </head>
 <body onbeforeunload="inactiveFunction();">
-    <h1>Welcome, <span id="name"></span>!</h1>
+    <button class="thing">here is a button</button>
+    <!-- <h1>Welcome, <span id="name"></span>!</h1> -->
     <p><span style="float:left;">{{> statusbuttons}}</span></p>
+    <br /><br />
     {{> classroomlayout }}
     {{> questions }}
 </body>
 
 <template name="statusbuttons">
-    <button class="bad">Stop</button>
-    <button class="meh">Slow Down</button>
-    <button class="good">Good</button>
+    {{getname}}
+    <button class="badbtn">Stop</button>
+    <button class="mehbtn">Slow Down</button>
+    <button class="goodbtn">Good</button>
 </template>
 
 <template name="classroomlayout">
